@@ -1,6 +1,7 @@
 6 June 2024: Wouter
 	- Fix memory leak in setup of dsa sig.
 	- Fix typos for 'the the' in text.
+	- Fix validation for repeated use of a DNAME record.
 
 4 June 2024: Yorgos
 	- Merge #1080: AddressSanitizer detection in tdir tests and memory leak
